fluxcd/infrastructure/services/overlays/production/phase-04-platform/victoria-metrics/httproute-ingest.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vminsert-ingest-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 401"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "metrics.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vminsert
          port: 8480
